--- a/styleguide.html
+++ b/styleguide.html
@@ -43,6 +43,10 @@
       <h3> TITLE </h3>
     </div>
 
+    <div class="component__section-part">
+      ...
+    </div>
+
     <li class="component__icon-text">
       <a class="link" href="#general">
         <i class="icon icon-general"></i>
@@ -51,8 +55,17 @@
     </li>
 
     <form class="component__form-field">
-      <input type="text" placeholder="Your name">
+      <label>First name</label>
+      <input class="input" type="text" placeholder="Your name">
     </form>
+
+    <form class="component__calendar">
+       <div class="calendar input-wrapper">
+         <input class="calendar input" type="date" value="2016-05-16">
+         <input class="calendar input" type="date" value="2016-05-16">
+         <div class="calendar icon-wrapper"><i class="icon icon-calendar"></i></div>
+       </div>
+     </form>
 
     <form class="component__contact-elements">
       <input type="text" placeholder="Your name">
