--- a/index.html
+++ b/index.html
@@ -125,22 +125,201 @@
                    <a class="calendar btn btn-refresh"><i class="icon-refresh"></i></a>
                  </form>
               </div>
-              <div class="section-part"> TABLE
+              <form class="component__numbers">
+                <ul class="numbers-list">
+                  <li class="item">
+                    <div class="inner">
+                      <h4>Visit signups</h4>
+                      <div class="inner-wrapper">
+                        <input class="inner input" type="text" value="124">
+                      </div>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="inner">
+                      <h4>Net deposit</h4>
+                      <div class="inner-wrapper">
+                        <input class="inner input" type="text" value="564">
+                      </div>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="inner">
+                      <h4>FTD</h4>
+                      <div class="inner-wrapper">
+                        <input class="inner input" type="text" value="445">
+                      </div>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="inner">
+                      <h4>Turn over</h4>
+                      <div class="inner-wrapper">
+                        <input class="inner input" type="text" value="432">
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </form>
+              <div class="chart">
+                <h4>Earnings chart</h4>
+                <img src="images/chart.jpg" alt="chart" title="chart">
               </div>
             </div>
           </section>
+
           <section class="section__links">
             <div class="container">
               <div class="component__title">
                 <h3> LINKS </h3>
               </div>
-              <div> OTHER ANOTHER </div>
+              <div class="button-wrapper">
+                <a class="btn btn-primary" href="#">+ add new</a>
+              </div>
+              <div class="table-wrapper">
+                <table class="links-table">
+                  <tbody>
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Home page</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.homepage.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Currently offer</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.currently.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Blurpix</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.blurpix.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Your Site</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.yoursitee.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Google</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.google.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Facebook</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.facebook.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Dashboard</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.dashboard.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Blurax</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.blurax.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Piece od wine</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.pieceofwine.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                    <tr class="component__table-row">
+                      <td class="table-text">
+                        <h4>Twitter</h4>
+                      </td>
+                      <td class="table-link">
+                        <a href="#">http://www.twitter.com</a>
+                      </td>
+                      <td class="table-font">
+                        <a href="#"><i class="icon-links"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
+                      </td>
+                    </tr>
+
+                  </tbody>
+                </table>
+              </div>
+              <div class="button-wrapper">
+                <a class="btn btn-primary" href="#">+ add new</a>
+              </div>
             </div>
           </section>
-
         </div>
-
       </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
