--- a/styleguide.html
+++ b/styleguide.html
@@ -47,12 +47,12 @@
       ...
     </div>
 
-    <li class="component__icon-text">
+    <!-- <li class="component__icon-text">
       <a class="link" href="#general">
         <i class="icon icon-general"></i>
         General
       </a>
-    </li>
+    </li> -->
 
     <form class="component__form-field">
       <label>First name</label>
@@ -72,9 +72,24 @@
       <input type="email" placeholder="Your email" required>
       <input type="text" placeholder="Subject">
       <textarea placeholder="What's up?"></textarea>
-      <!-- <a href=# class="btn btn-six"> WYŚLIJ </a>
-      <p> * - chętnie przyjmiemy i wykorzystamy Twoje wszelkie dane osobowe :D </p> -->
     </form>
+
+    <table class="links-table">
+      <tbody>
+        <tr class="component__table-row">
+          <td class="table-text">
+            <h4>Home page</h4>
+          </td>
+          <td class="table-link">
+            <a href="#">http://www.homepage.com</a>
+          </td>
+          <td class="table-font">
+            <a href="#"><i class="icon-links"></i></a>
+            <a href="#"><i class="icon-trash"></i></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
     <section class="section__general-statistic">
       <div class="container">
