--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="images/icons/icon-font/css/Glyphter.css">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- pozwala tworzyc layout dostosowany do mobile-->
@@ -15,7 +16,7 @@
   <body>
     <div class="general">
       <div class="row">
-        <section class="section__sidebar col-md-2">
+        <section class="section__sidebar">
           <div class="container">
             <div class="list">
               <div class="logo">
@@ -24,7 +25,7 @@
                   <i class="fas fa-bars"></i>
                 </a>
               </div>
-              <ul>
+              <ul class="navigation">
                 <li class="component__icon-text">
                   <a class="link" href="#general">
                     <i class="icon icon-general"></i>
@@ -70,23 +71,25 @@
               </ul>
             </div>
             <div class="manager">
-              <h3> YOUR MANAGER </h3>
+              <h4> YOUR MANAGER </h4>
               <div class="manager-name">
-                <p class='col-md-4'> foto </p>
-                <p class='col-md-8'> Michael E. Blum </p>
+                <p>
+                  <img src="images/manager.jpg" alt="manager" title="manager">
+                </p>
+                <p class="manager-text"> Michael E. </p>
               </div>
             </div>
           </div>
         </section>
 
-        <div class="main-page col-md-10">
+        <div class="main-page">
           <header class="section__topbar">
             <div class="container">
               <div class="topbar row">
                 <div class="col-md-2 price">
                   <a class="link" href="#">
                     <i class="icon icon-wallet"></i>
-                    $1,500.00
+                    <p> $1,500.00 </p>
                     <i class="icon icon-arrow-down"></i>
                   </a>
                 </div>
@@ -97,8 +100,8 @@
                 </div>
                 <div class="col-md-2 profile">
                   <a class="link" href="#">
-                    <i class="icon icon-wallet"></i>
-                    Leonardo Dicaprio
+                    <i class="icon icon-profile"></i>
+                    <p> Leonardo Dicaprio </p>
                   </a>
                 </div>
                 <div class="col-md-1 exit">
