Start prepare page to RWD

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   </li>
                 </ul>
               </form>
-              <div class="chart">
+              <div class="chart scroll-wrapper">
                 <h4>Earnings chart</h4>
                 <img src="images/chart.jpg" alt="chart" title="chart">
               </div>
@@ -179,7 +179,7 @@
               <div class="button-wrapper">
                 <a class="btn btn-primary" href="#">+ add new</a>
               </div>
-              <div class="table-wrapper">
+              <div class="table-wrapper scroll-wrapper">
                 <table class="links-table">
                   <tbody>
                     <tr class="component__table-row">
