--- a/index.html
+++ b/index.html
@@ -79,6 +79,35 @@
                 <p class="manager-text"> Michael E. </p>
               </div>
             </div>
+            <header class="section__topbar-at-sidebar">
+              <div class="container">
+                <div class="topbar row">
+                  <div class="col-md-2 price">
+                    <a class="link" href="#">
+                      <i class="icon icon-wallet"></i>
+                      <p> $1,500.00 </p>
+                      <i class="icon icon-arrow-down"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-1 notification">
+                    <a class="link" href="#">
+                      <i class="icon icon-notification"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-2 profile">
+                    <a class="link" href="#">
+                      <i class="icon icon-profile"></i>
+                      <p> Leonardo Dicaprio </p>
+                    </a>
+                  </div>
+                  <div class="col-md-1 exit">
+                    <a class="link" href="#">
+                      <i class="icon icon-quit"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </header>
           </div>
         </section>
 
@@ -134,7 +163,7 @@
                     <div class="inner">
                       <h4>Visit signups</h4>
                       <div class="inner-wrapper">
-                        <input class="inner input" type="text" value="124">
+                        <input class="inner-input" type="text" value="124">
                       </div>
                     </div>
                   </li>
@@ -142,7 +171,7 @@
                     <div class="inner">
                       <h4>Net deposit</h4>
                       <div class="inner-wrapper">
-                        <input class="inner input" type="text" value="564">
+                        <input class="inner-input" type="text" value="564">
                       </div>
                     </div>
                   </li>
@@ -150,7 +179,7 @@
                     <div class="inner">
                       <h4>FTD</h4>
                       <div class="inner-wrapper">
-                        <input class="inner input" type="text" value="445">
+                        <input class="inner-input" type="text" value="445">
                       </div>
                     </div>
                   </li>
@@ -158,7 +187,7 @@
                     <div class="inner">
                       <h4>Turn over</h4>
                       <div class="inner-wrapper">
-                        <input class="inner input" type="text" value="432">
+                        <input class="inner-input" type="text" value="432">
                       </div>
                     </div>
                   </li>
