Change RWD elements

--- a/index.html
+++ b/index.html
@@ -81,26 +81,26 @@
             </div>
             <header class="section__topbar-at-sidebar">
               <div class="container">
-                <div class="topbar row">
-                  <div class="col-md-2 price">
+                <div class="topbar">
+                  <div class="price">
                     <a class="link" href="#">
                       <i class="icon icon-wallet"></i>
                       <p> $1,500.00 </p>
                       <i class="icon icon-arrow-down"></i>
                     </a>
                   </div>
-                  <div class="col-md-1 notification">
+                  <div class="notification">
                     <a class="link" href="#">
                       <i class="icon icon-notification"></i>
                     </a>
                   </div>
-                  <div class="col-md-2 profile">
+                  <div class="profile">
                     <a class="link" href="#">
                       <i class="icon icon-profile"></i>
                       <p> Leonardo Dicaprio </p>
                     </a>
                   </div>
-                  <div class="col-md-1 exit">
+                  <div class="exit">
                     <a class="link" href="#">
                       <i class="icon icon-quit"></i>
                     </a>
@@ -115,25 +115,25 @@
           <header class="section__topbar">
             <div class="container">
               <div class="topbar row">
-                <div class="col-md-2 price">
+                <div class="price">
                   <a class="link" href="#">
                     <i class="icon icon-wallet"></i>
                     <p> $1,500.00 </p>
                     <i class="icon icon-arrow-down"></i>
                   </a>
                 </div>
-                <div class="col-md-1 notification">
+                <div class="notification">
                   <a class="link" href="#">
                     <i class="icon icon-notification"></i>
                   </a>
                 </div>
-                <div class="col-md-2 profile">
+                <div class="profile">
                   <a class="link" href="#">
                     <i class="icon icon-profile"></i>
                     <p> Leonardo Dicaprio </p>
                   </a>
                 </div>
-                <div class="col-md-1 exit">
+                <div class="exit">
                   <a class="link" href="#">
                     <i class="icon icon-quit"></i>
                   </a>
