Add first modal

--- a/index.html
+++ b/index.html
@@ -350,8 +350,20 @@
             </div>
           </section>
         </div>
-      </div>
 
+        <div class="overlay" id="overlay">
+          <div class="modal" id="myModal">
+            <div class="btn-close js--close-modal">x</div>
+
+            <h4>Witaj w modalu!</h4>
+            <p>Lorem ipsum dolor sit amet...</p>
+
+            <button class="btn js--close-modal">Okay</button>
+          </div>
+        </div>
+
+
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
